# solveit

./: .gitignore  Cargo.toml  README.md  main.py  requirements.txt
codeforces/problemset/: aplusb.py  apowerbminusbpowera.py  thesum.py  watermelon.py
coursera/algsone/: percolation.py
interviewquestions/decorators/: countclassmethodcalls.py
leet/: structures.py  testit.py
leet/easy/: balancedbinarytree.py  besttimetobuystock.py  binarysearch.py  binarytreeinordertraversal.py  binarytreepreordertraversal.py  checkifbinarystringhasatmostonesegmentofones.py  circularsentence.py  containsduplicate.py  convertbinarynumberinalinkedlist.py  convertsortedarrayintobinarysearchtree.py  deletennodesaftermnodesofalinkedlist.py  excelsheetcolumnnumber.py  findallduplicatesinarray.py  findifpathexistsingraph.py  findminimumdepthofbinarytree.py  findpivotindex.py  findthearrayconcatenationvalue.py  findthedifference.py  firstbadversion.py  fizzbuzz.py  flippinganimage.py  floodfill.py  hammingdistance.py  happynumber.py  intersectionoftwolinkedlists.py  ismonotonic.py  issubsequence.py  lengthoflastword.py  linkedlistcycle.py  loggerratelimiter.py  longestcommonprefix.py  matrixdiagonalsum.py  maximumdepthofbinarytree.py  mergesortedarrays.py  mergetwo2darrayssummingvalues.py  mergetwosortedlists.py  middleofthelinkedlist.py  mincostclimbingstairs.py  movezeroes.py  movingaveragefromdatastream.py  (+28 more)
leet/hard/: basiccalculator.py  besttimetobuyandsellstock3.py  binarytreemaximumpathsum.py  dungeongame.py  (+24 more)
src/: main.rs
yandex/: lektioneinz.py  lektionfunf.py  lektionvier.py
(+159 files in other folders)
