[package]
name = "solveit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "*"
piston2d-graphics = "*"
piston_window = "*"
image = "*"
rand = "*"
log = "*"
fern = "0.6.2"
humantime = "*"
chrono = "*"
bitflags = "2.1.0"
lazy_static = "*"
nom = "*"
enum-primitive-derive = "*"
num-traits = "*"

[profile.dev]
opt-leve = 3